overflow fix

--- a/src/blocks/hotToday/__image-container/hotToday__image-container.css
+++ b/src/blocks/hotToday/__image-container/hotToday__image-container.css
@@ -6,5 +6,4 @@
   border-top-left-radius: 102px;
   border-top-right-radius: 120px;
   margin: auto;
-  overflow: hidden;
 }
